force-app/main/default/objects/FinancialAccountService__c/FinancialAccountService__c.object-meta.xml
<CustomObject>
    <description>Services opted by customer for Financial Account</description>
    <label>Financial Account Service</label>
    <nameField>
        <displayFormat>FAS-{0000}</displayFormat>
        <label>Financial Account Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>