force-app/main/default/objects/FinancialAccountService__c/fields/FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Services for Financial Account</description>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount__c</referenceTo>
    <relationshipLabel>Financial Account Services</relationshipLabel>
    <relationshipName>FinancialAccountServices</relationshipName>
    <type>Lookup</type>
</CustomField>