force-app/main/default/objects/FinancialAccountService__c/fields/isSelected__c.field-meta.xml
<CustomField>
    <fullName>isSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if service is selected by customer</description>
    <label>isSelected?</label>
    <type>Checkbox</type>
</CustomField>