force-app/main/default/objects/FinancialAccountService__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>isSelected__c</columns>
    <columns>Description__c</columns>
    <columns>FinancialAccount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>